[package]
name = "leaves"
version = "0.4.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"
repository = "https://github.com/songzhi/leaves"
readme = "README.md"
keywords = ["distribution", "id", "async", "await"]
license = "MIT"
description = "Distributed ID Allocator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime-tokio"]
mysql = ["sqlx", "sqlx/mysql"]
postgres = ["sqlx", "sqlx/postgres"]
sqlite = ["sqlx", "sqlx/sqlite"]
redis = ["darkredis"]
mongo = ["mongodb", "bson"]
runtime-tokio = ["tokio", "sqlx/runtime-tokio", "darkredis/runtime_tokio", "mongodb/tokio-runtime"]
runtime-async-std = ["async-std", "sqlx/runtime-async-std", "darkredis/runtime_async_std", "mongodb/async-std-runtime"]

[dependencies]
async-trait = "0.1"
dashmap = "3.9"
num_cpus = "1.12"
cfg-if = "0.1"
thiserror = "1.0"
tracing = "0.1"

tokio = { version="0.2.20", features=["time", "sync", "rt-threaded"], optional=true }
async-std = { version = "1.5.0", optional=true  }

darkredis = { version="0.7", default-features = false, optional=true}
sqlx = { version="0.3", default-features = false, features=["macros"] , optional=true }
mongodb = { version="0.10", default-features = false, optional=true }
bson = { version="0.14", optional=true }


[[example]]
name = "redis"
path = "examples/redis.rs"
required-features = ["redis", "tokio/macros"]

[[example]]
name = "mysql"
path = "examples/mysql.rs"
required-features = ["mysql", "runtime-tokio", "tokio/macros"]