[package]
name = "leaves"
version = "0.4.0-beta.1"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"
repository = "https://github.com/songzhi/leaves"
readme = "README.md"
keywords = ["distribution", "id", "async", "await"]
license = "MIT"
description = "Distributed ID Allocator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[features]
default = ["runtime-tokio"]
mysql = ["sqlx", "sqlx/mysql"]
postgres = ["sqlx", "sqlx/postgres"]
sqlite = ["sqlx", "sqlx/sqlite"]
redis = ["darkredis"]
mongo = ["mongodb", "bson"]
runtime-tokio = ["tokio", "sqlx/runtime-tokio", "darkredis/runtime_tokio", "mongodb/tokio-runtime"]
runtime-async-std = ["async-std", "sqlx/runtime-async-std", "darkredis/runtime_async_std", "mongodb/async-std-runtime"]

[dependencies]
async-trait = "0.1"
dashmap = "4.0.0-rc6"
num_cpus = "1.13"
cfg-if = "0.1"
thiserror = "1.0"
tracing = "0.1"
tokio = { version="0.2", features=["time", "rt-threaded"], optional=true }
async-std = { version = "1.6", optional=true  }

darkredis = { version="0.7", default-features = false, optional=true }
sqlx = { version="0.3", default-features = false, features=["macros"] , optional=true }
mongodb = { version="0.10", default-features = false, optional=true }
bson = { version="0.14", optional=true }
serde = { version="1.0", features=["derive"] }
async-mutex = "1.1"

[dev-dependencies]
dotenv = "0.15"

[[example]]
name = "redis"
path = "examples/redis.rs"
required-features = ["redis", "tokio/macros"]

[[example]]
name = "mysql"
path = "examples/mysql.rs"
required-features = ["mysql", "tokio/macros"]

[[example]]
name = "mock"
path = "examples/mock.rs"
required-features = ["tokio/macros"]

[[test]]
name = "mongodb"
path = "tests/mongodb.rs"
required-features = ["mongo", "tokio/macros"]

[[test]]
name = "redis"
path = "tests/redis.rs"
required-features = ["redis", "tokio/macros"]
